--- a/test/gradient.html
+++ b/test/gradient.html
@@ -1,12 +1,71 @@
-# Gradient
+<!DOCTYPE html>
+<html><head>
 
-Class to create **linear, radial, elliptical and conic gradients** as bitmaps, even without canvas
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-**version 1.0.0** (9 kB minified)
-
-Example:
-
-```javascript
+<title>Gradient Gradients</title>
+<style type="text/css">
+body {
+    font-size: 16px;
+    font-family: Arial, san-serif;
+}
+#container {
+    position: relative;
+    width: 100%;
+    height: 1000px;
+    padding: 0;
+    margin: 0 auto;
+    overflow: visible;
+}
+.button {
+    position: relative;
+    display: inline-block;
+    padding: 8px 12px;
+    background: white;
+    color: black;
+    border: 1px solid #676767;
+    border-radius: 8px;
+    cursor: pointer;
+    margin: 1px;
+    margin-right: 10px;
+}
+.button:hover {
+    border-width: 2px;
+    margin: 0;
+    margin-right: 9px;
+}
+canvas {
+    position: relative;
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    margin-right: 10px
+    margin-bottom: 10px;
+}
+h4 {
+    display: block;
+}
+</style>
+</head><body>
+<h1>Gradients</h1>
+<div id="container">
+<h4>Linear:</h4>
+<canvas id="linear1" width="200" height="200"></canvas>
+<canvas id="linear2" width="200" height="200"></canvas>
+<h4>Radial:</h4>
+<canvas id="radial1" width="200" height="200"></canvas>
+<canvas id="radial2" width="200" height="200"></canvas>
+<h4>Elliptic:</h4>
+<canvas id="elliptic1" width="200" height="200"></canvas>
+<canvas id="elliptic2" width="200" height="200"></canvas>
+<h4>Conic:</h4>
+<canvas id="conic1" width="200" height="200"></canvas>
+<canvas id="conic2" width="200" height="200"></canvas>
+</div>
+<script src="../src/Gradient.js"></script>
+<script>
+(function() {
+"use strict";
 const w = 200, h = 200;
 
 function addColorStops(gradient)
@@ -86,10 +145,6 @@ drawLinearGradient(20, 20, w - 20, h - 20);
 drawRadialGradient(100, 100, 10, 160, 120, 80);
 drawEllipticGradient(100, 100, 100, 40, Math.PI/4);
 drawConicGradient(Math.PI/4, 60, 80);
-```
-
-![gradients example](/screenshot.png)
-
-**see also**
-
-* [css-color](https://github.com/foo123/css-color) simple class to parse and manipulate colors in various formats
+})();
+</script>
+</body></html>
