--- a/test/gradient.html
+++ b/test/gradient.html
@@ -3,7 +3,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title>Gradient Gradients</title>
+<title>Gradient Gradients and Patterns</title>
 <style type="text/css">
 body {
     font-size: 16px;
