--- a/test/gradient.html
+++ b/test/gradient.html
@@ -217,7 +217,7 @@ function drawConicGradient(angle, cx, cy)
 drawLinearGradient(20, 20, w - 20, h - 20);
 drawRadialGradient(100, 100, 10, 160, 120, 80);
 drawEllipticGradient(100, 100, 100, 40, Math.PI/4);
-drawConicGradient(Math.PI/4, 60, 80);
+drawConicGradient(-Math.PI/4, 60, 80);
 })();
 </script>
 </body></html>
